infrastructure/terraform/main.tf
resource "aws_vpc" "classroom_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "Classroom-Booking-VPC"
  }
}
