infrastructure/terraform/route_table.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.classroom_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.classroom_igw.id
  }

  tags = {
    Name = "Classroom-Public-Route-Table"
  }
}

resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}
