infrastructure/terraform/security_group.tf
resource "aws_security_group" "classroom_sg" {
  name        = "classroom-booking-sg"
  description = "Security group for Classroom Booking System"
  vpc_id      = aws_vpc.classroom_vpc.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["64.43.155.38/32"]
  }

  ingress {
    description = "Application ports"
    from_port   = 8080
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["64.43.155.38/32"]
  }

  ingress {
    description = "Grafana"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["64.43.155.38/32"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Classroom-Booking-Security-Group"
  }
}
